--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,6 +125,7 @@ jobs:
           echo "go_version=$(go version)" >> "$GITHUB_OUTPUT"
           go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@latest
           echo "gcl_version=$(golangci-lint --version)" >> "$GITHUB_OUTPUT"
+          golangci-lint --version
       - name: Cache custom-gcl
         id: cache-custom-gcl
         uses: actions/cache@v4
