--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
         id: versions
         run: |
           echo "go_version=$(go version)" >> "$GITHUB_OUTPUT"
-          go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@latest
+          apt install -y golangci-lint
           echo "gcl_version=$(golangci-lint --version)" >> "$GITHUB_OUTPUT"
           golangci-lint --version
       - name: Cache custom-gcl
