--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
         id: versions
         run: |
           echo "go_version=$(go version)" >> "$GITHUB_OUTPUT"
-          apt install -y golangci-lint
+          go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@latest
           echo "gcl_version=$(golangci-lint --version | sed 's/,/./g')" >> "$GITHUB_OUTPUT"
       - name: Cache custom-gcl
         id: cache-custom-gcl
