ci: default working dir is akari

--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -9,6 +9,10 @@ permissions:
   pull-requests: write
   contents: read
 
+defaults:
+  run:
+    working-directory: ./akari
+
 jobs:
   all-status-check:
     runs-on: ubuntu-latest
