chore: add dynamic working directory input to setup-golang action

--- a/.github/actions/setup-golang/action.yml
+++ b/.github/actions/setup-golang/action.yml
@@ -1,12 +1,19 @@
 name: Setup Golang
 description: Setup Golang
 
+inputs:
+  working-directory:
+    description: The working directory to run the commands in. Default is ./akari.
+    required: false
+    default: ./akari
+
 runs:
   using: composite
   steps:
     - name: Get current directory
       id: get-current-directory
       shell: bash
+      working-directory: ${{ inputs.working-directory }}
       run: echo "current-directory=$(pwd)" >> $GITHUB_OUTPUT
     - name: Set up Go
       uses: actions/setup-go@v6
@@ -15,8 +22,10 @@ runs:
         cache-dependency-path: ${{ steps.get-current-directory.outputs.current-directory }}/go.mod
     - name: Download Go modules
       shell: bash
+      working-directory: ${{ steps.get-current-directory.outputs.current-directory }}
       run: go mod download
     - name: Run `make init`
       shell: bash
+      working-directory: ${{ steps.get-current-directory.outputs.current-directory }}
       run: |
         make init
