--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -9,12 +9,15 @@ permissions:
   pull-requests: write
   contents: read
 
+defaults:
+  run:
+    working-directory: ./akari
+
 jobs:
   all-status-check:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs:
-      - ci-req-check
       - yaml-lint
       - action-lint
       - dotenv-lint
@@ -25,20 +28,18 @@ jobs:
       - golang-test-comment-check
       - golang-test-check
       - golang-generate-check
-    steps:
-      - name: All status check
-        run: echo "All status check passed"
-
-  ci-req-check:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
+    defaults:
+      run:
+        working-directory: ./
     steps:
       - uses: actions/checkout@v5
       - name: Check all-status-check
         run: |
           diff \
-            <(yq ".jobs | del(.all-status-check) | keys.[]" .github/workflows/ci.yml) \
-            <(yq ".jobs.all-status-check.needs.[]" .github/workflows/ci.yml)
+            <(yq ".jobs | del(.all-status-check) | keys.[]" .github/workflows/akari-ci.yml) \
+            <(yq ".jobs.all-status-check.needs.[]" .github/workflows/akari-ci.yml)
+      - name: All status check
+        run: echo "All status check passed"
 
   yaml-lint:
     runs-on: ubuntu-latest
