ci: add git status check to CI workflow for better visibility of changes

--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -107,6 +107,7 @@ jobs:
       - name: Check diff
         run: |
           if [[ $(git status --porcelain) ]]; then
+            git status --porcelain
             git diff
             exit 1
           fi
