feat(akari): Create database migration files with Atlas
Generate and migarte with Makefile.

--- a/akari/.env.example
+++ b/akari/.env.example
@@ -4,3 +4,5 @@ LLM_MODEL_NAME=gemini-2.5-flash
 
 LOG_LEVEL=debug
 LOG_FORMAT=text
+
+DATABASE_URL=postgres://user:pass@localhost:5432/akari?sslmode=disable
