chore(akari): Add Atlas hash regeneration command to Makefile
Keep the hash up-to-date.

--- a/akari/Makefile
+++ b/akari/Makefile
@@ -60,6 +60,10 @@ migrate-status:
 		--dir "file://internal/database/migrations" \
 		--url "$${DATABASE_URL}"
 
+migrate-hash:
+	atlas migrate hash \
+		--dir "file://internal/database/migrations"
+
 migrate-validate:
 	atlas migrate validate \
 		--dir "file://internal/database/migrations"
