--- a/akari/.env.example
+++ b/akari/.env.example
@@ -5,4 +5,4 @@ LLM_MODEL_NAME=gemini-2.5-flash
 LOG_LEVEL=debug
 LOG_FORMAT=text
 
-DATABASE_URL=postgres://user:pass@localhost:5432/akari?sslmode=disable
+DATABASE_URL=postgres://postgres:pass@localhost:5432/akari?sslmode=disable
