fix: env dont use database url

--- a/akari/.env.example
+++ b/akari/.env.example
@@ -1,8 +1,15 @@
-LLM_PROJECT_ID=kizuna-org
-LLM_LOCATION=asia-northeast1
-LLM_MODEL_NAME=gemini-2.5-flash
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_password_here
+POSTGRES_DB=akari
+POSTGRES_SSLMODE=disable
 
-LOG_LEVEL=debug
+LLM_PROJECT_ID=your_gcp_project_id
+LLM_LOCATION=us-central1
+LLM_MODEL_NAME=gemini-1.5-pro
+
+LOG_LEVEL=info
 LOG_FORMAT=text
 
-DATABASE_URL=postgres://postgres:pass@localhost:5432/akari?sslmode=disable
+DISCORD_TOKEN=your_discord_bot_token
