ci(akari): add migrate-check job to CI workflow for migration validation and dry-run (#40)
* feat: add docker compose

* chore: enhance Makefile with Docker Compose commands and streamline migration process

* chore: add migrate-dry-run command to Makefile for safer migration testing

* fix: env dont use database url

* chore: add example environment file and update Atlas configuration for PostgreSQL connection

* ci: add migrate-check job to CI workflow for migration validation and dry-run

* chore: run fmt, lint, and tidy

* chore: update setup-db action to use input working-directory for improved flexibility

* chore: add Go setup check to setup-db action for conditional execution

* ci: improve setup-db action with auto-detection and atlas setup

- Add automatic detection of setup-golang execution to avoid duplicate runs
- Use ariga/setup-atlas@v0 for atlas CLI installation
- Fix missing atlas command error in migrate-apply step

--- a/akari/Makefile
+++ b/akari/Makefile
@@ -3,21 +3,24 @@ BIN := bin/$(APP_NAME)
 GO := go
 ENV := local
 
-.PHONY: init build run test fmt vet tidy generate lint lint-fix tools clean migrate-new migrate-apply migrate-status migrate-validate migrate-lint
+.PHONY: init build run test fmt vet tidy generate lint lint-fix tools clean migrate-new migrate-apply migrate-status migrate-validate migrate-lint migrate-dry-run up down down-volumes
 
 init:
 	go mod download
 	if [ ! -f .env ]; then \
 		cp .env.example .env; \
 	fi
+	if [ ! -f .env.test ]; then \
+		cp .env.test.example .env.test; \
+	fi
 
 build: init generate
 	$(GO) build -o $(BIN) ./cmd/akari
 
-run: init generate
+run: init generate migrate-apply
 	$(GO) run ./cmd/akari
 
- test:
+test: init generate migrate-apply
 	$(GO) test ./...
 
 fmt:
@@ -41,21 +44,33 @@ lint:
 clean:
 	rm -rf bin
 
-migrate-new:
+up:
+	docker compose up -d
+
+down:
+	docker compose down
+
+down-volumes:
+	docker compose down -v
+
+migrate-new: up
 	@if [ -z "$(NAME)" ]; then \
 		echo "Error: NAME is required. Usage: make migrate-new NAME=migration_name"; \
 		exit 1; \
 	fi
 	atlas migrate diff $(NAME) --env=$(ENV)
 
-migrate-apply:
+migrate-apply: up
 	atlas migrate apply --env=$(ENV)
 
-migrate-status:
+migrate-status: up
 	atlas migrate status --env=$(ENV)
 
-migrate-hash:
+migrate-hash: up
 	atlas migrate hash --env=$(ENV)
 
-migrate-validate:
+migrate-validate: up
 	atlas migrate validate --env=$(ENV)
+
+migrate-dry-run: up
+	atlas migrate apply --dry-run --env=$(ENV)
