--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -82,6 +82,7 @@ jobs:
           submodules: recursive
           ref: ${{ github.base_ref }}
       - uses: ./.github/actions/setup-golang
+      - uses: ariga/setup-atlas@v0
       - name: Run `make init` (base branch)
         run: make init
       - uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
