ci(akari): add Atlas setup action to CI workflow for improved databas… (#47)
* ci(akari): add Atlas setup action to CI workflow for improved database management

* chore(akari): update migrate-dry-run command in Makefile to include Docker Compose setup

* ci(akari): filter out unnecessary migration output in CI workflow for cleaner logs

--- a/akari/Makefile
+++ b/akari/Makefile
@@ -72,5 +72,6 @@ migrate-hash: up
 migrate-validate: up
 	atlas migrate validate --env=$(ENV)
 
-migrate-dry-run: up
-	atlas migrate apply --dry-run --env=$(ENV)
+migrate-dry-run:
+	@docker compose up -d >/dev/null 2>&1
+	@atlas migrate apply --dry-run --env=$(ENV)
