--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -82,6 +82,7 @@ jobs:
           submodules: recursive
           ref: ${{ github.base_ref }}
       - uses: ./.github/actions/setup-golang
+      - uses: ariga/setup-atlas@v0
       - name: Run `make init` (base branch)
         run: make init
       - uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
@@ -110,6 +111,7 @@ jobs:
         run: |
           set +e
           MIGRATE_OUT=$(make migrate-dry-run 2>&1)
+          MIGRATE_OUT=$(echo "$MIGRATE_OUT" | grep -v "No migration files to execute")
           if echo "$MIGRATE_OUT" | sqlfluff fix - --dialect postgres > /tmp/migrate_formatted.sql 2>/dev/null; then
             MIGRATE_OUT=$(cat /tmp/migrate_formatted.sql)
           fi
