--- a/akari/compose.yml
+++ b/akari/compose.yml
@@ -1,6 +1,6 @@
 services:
   akari-db:
-    image: postgres:17.6@sha256:00bc86618629af00d2937fdc5a5d63db3ff8450acf52f0636ec813c7f4902929
+    image: postgres:18.0
     container_name: akari-db
     env_file: .env
     volumes:
