--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -96,6 +96,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           submodules: recursive
+      - uses: ./.github/actions/setup-golang
       - name: Run `make init` (PR branch)
         run: make init
       - uses: actions/setup-python@v5
