--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -218,38 +218,12 @@ jobs:
       - name: Run go test
         id: golang-test
         run: |
-          set +e
-          TEST_OUT=$(go test ./... -coverpkg=./...)
-          TEST_EXIT_CODE=$?
-          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          {
-            echo "comment<<$EOF"
-            printf "# Test coverage\n\n"
-            if [ "$TEST_EXIT_CODE" -eq 0 ]; then
-              printf ":white_check_mark: All tests passed successfully.\n\n"
-              printf "| Status | Package | Time | Coverage |\n"
-              printf "|--------|---------|------|----------|\n"
-              echo "$TEST_OUT" | sed -E "s/^\?\s+/?:/g; s/^ok\s+/ok:/g; s/^\s/:/g; s/\s+/ /g; s/coverage:/::/g; s/([0-9.]+)s\s::/\:\1s\:/g; s/ of statements//g;" | sed  -e "s/in .\/...//g" | awk -F'[:]' '{ print "| " $1 " | " $2 " | " $3 " |" $4 " |"}'
-            else
-              printf ":red_circle: Some tests failed.\n\n"
-              printf "<details>\n"
-              printf "<summary>go test result</summary>\n"
-              printf "\n\`\`\`\n\n"
-              echo "$TEST_OUT"
-              printf "\n\`\`\`\n\n"
-              printf "</details>\n"
-            fi
-            echo "$EOF"
-          } >> "$GITHUB_ENV"
-          exit "$TEST_EXIT_CODE"
+          go test ./... -coverprofile=coverage.out -coverpkg=./...
         continue-on-error: true
-      - name: Create PR comment
-        uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          number: ${{ github.event.pull_request.number }}
-          header: golang-test
-          message: ${{ env.comment }}
+          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Error check
         if: ${{ steps.golang-test.outcome != 'success' }}
         run: exit 1
