--- a/akari/.golangci.yml
+++ b/akari/.golangci.yml
@@ -7,6 +7,13 @@ linters:
     - ireturn
     - err113
     - shironerr113
+  exclusions:
+    rules:
+      - path: (.+)_test\.go
+        linters:
+          - funlen
+          - dupl
+
   settings:
     custom:
       shironerr113:
