style(akari): Exclude `exhaustruct` from test code
Simplify the table-driven test structs.

--- a/akari/.golangci.yml
+++ b/akari/.golangci.yml
@@ -11,8 +11,9 @@ linters:
     rules:
       - path: (.+)_test\.go
         linters:
-          - funlen
           - dupl
+          - exhaustruct
+          - funlen
 
   settings:
     custom:
