test(akari/pkg): Introduce unit tests (#60)
* chore(akari): Ignore funlen and dupl linter for test code

By using table-driven test, these linters warns a lot.

* test(akari/pkg/config): Introduce unit tests

Check the logic is working correctly as expected.

* test(akari/pkg/llm): Introduce unit tests

Check the logic is working correctly as expected.

* test(akari/pkg/discord): Introduce unit tests

Check the logic is working correctly as expected.

* test(akari/pkg/database): Introduce unit tests

Check the logic is working correctly as expected.

* style(akari): Exclude `exhaustruct` from test code

Simplify the table-driven test structs.

--- a/akari/.golangci.yml
+++ b/akari/.golangci.yml
@@ -7,6 +7,14 @@ linters:
     - ireturn
     - err113
     - shironerr113
+  exclusions:
+    rules:
+      - path: (.+)_test\.go
+        linters:
+          - dupl
+          - exhaustruct
+          - funlen
+
   settings:
     custom:
       shironerr113:
