--- a/.github/workflows/akari-ci.yml
+++ b/.github/workflows/akari-ci.yml
@@ -296,12 +296,12 @@ jobs:
         uses: ko-build/setup-ko@v0.9
       - name: Run go generate
         run: make generate
-      - uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 #v3.6.0
+      - uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
       - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
       - name: Build with ko
         env:
           KO_DOCKER_REPO: ko.local/akari
         run: |
-          IMAGE=$(ko build --bare ./cmd/akari)
+          IMAGE="$(ko build --bare ./cmd/akari)"
           echo "Built image: ${IMAGE}"
           docker images | grep akari || true
