--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: ko-build/setup-ko@v0.9
       - name: Run go generate
         run: make generate
-      - uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 #v3.6.0
+      - uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
       - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
       - uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
         with:
@@ -53,17 +53,17 @@ jobs:
       - name: Build and push with ko
         id: build
         env:
-          KO_DOCKER_REPO: ghcr.io/${{ github.repository_owner }}/akari
+          KO_DOCKER_REPO: ghcr.io/${{ github.repository }}
           KOSCHEME: github.com
         run: |
           TAGS=""
-          if [[ "${{ github.ref }}" =~ ^refs/tags/ ]]; then
-            TAGS="--tags=${{ github.ref_name }},latest"
-          elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            TAGS="--tags=main,${{ github.sha }}"
+          if [[ "$GITHUB_REF" =~ ^refs/tags/ ]]; then
+            TAGS="--tags=$GITHUB_REF_NAME,latest"
+          elif [[ "$GITHUB_REF" == "refs/heads/main" ]]; then
+            TAGS="--tags=main,$GITHUB_SHA"
           else
-            TAGS="--tags=${{ github.ref_name }},${{ github.sha }}"
+            TAGS="--tags=$GITHUB_REF_NAME,$GITHUB_SHA"
           fi
-          IMAGE=$(ko build --bare $TAGS ./cmd/akari)
+          IMAGE="$(ko build --bare "$TAGS" ./cmd/akari)"
           echo "Built image: ${IMAGE}"
           docker images | grep akari || true
