fix(ci): update release workflow to use release tag name for image tagging

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
     timeout-minutes: 10
     outputs:
       release-created: ${{ steps.release.outputs.release_created }}
+      release-tag-name: ${{ steps.release.outputs.tag_name }}
+      tag-name: ${{ steps.release.outputs.tag_name }}
     steps:
       - uses: actions/checkout@v5
         with:
@@ -55,14 +57,7 @@ jobs:
           KO_DOCKER_REPO: ghcr.io/${{ github.repository }}
           KOSCHEME: github.com
         run: |
-          TAGS=""
-          if [[ "$GITHUB_REF" =~ ^refs/tags/ ]]; then
-            TAGS="--tags=$GITHUB_REF_NAME,latest"
-          elif [[ "$GITHUB_REF" == "refs/heads/main" ]]; then
-            TAGS="--tags=main,$GITHUB_SHA"
-          else
-            TAGS="--tags=$GITHUB_REF_NAME,$GITHUB_SHA"
-          fi
+          TAGS="--tags=${{ needs.release-please.outputs.release-tag-name }},latest"
           IMAGE="$(ko build --bare "$TAGS" ./cmd/akari)"
           echo "Built image: ${IMAGE}"
           docker images | grep akari || true
