--- a/akari/Dockerfile
+++ b/akari/Dockerfile
@@ -16,7 +16,7 @@ FROM alpine:3.23@sha256:51183f2cfa6320055da30872f211093f9ff1d3cf06f39a0bdb212314
 
 WORKDIR /app
 
-RUN apk add --no-cache ca-certificates tzdata
+RUN apk add --no-cache ca-certificates tzdata procps
 
 COPY --from=builder /build/bin/akari /app/akari
 
