fix: correct environment variable usage in database migration command

--- a/.github/actions/setup-db/action.yml
+++ b/.github/actions/setup-db/action.yml
@@ -41,3 +41,4 @@ runs:
       working-directory: ${{ inputs.working-directory }}
       run: |
         make migrate-apply
+        make migrate-apply ENV=test
