fix: enhance environment variable loading for configuration

--- a/akari/Makefile
+++ b/akari/Makefile
@@ -22,7 +22,7 @@ run: generate migrate-apply
 
 test: generate
 	$(MAKE) migrate-apply ENV=test
-	$(GO) test ./...
+	ENV=test $(GO) test ./...
 
 fmt:
 	$(GO) fmt ./...
