test(*): add edge test (#133)
Co-authored-by: Souma <git@5ouma.me>

--- a/akari/Makefile
+++ b/akari/Makefile
@@ -20,8 +20,9 @@ build: generate clean
 run: generate migrate-apply
 	$(GO) run ./cmd/akari
 
-test: generate migrate-apply
-	$(GO) test ./...
+test: generate
+	$(MAKE) migrate-apply ENV=test
+	ENV=test $(GO) test ./...
 
 fmt:
 	$(GO) fmt ./...
