--- a/compose.yml
+++ b/compose.yml
@@ -89,8 +89,12 @@ services:
     depends_on:
       akari-db:
         condition: service_healthy
-    ports:
-      - "8080:8080"
+    # Ports are not exposed to host for security reasons.
+    # Cloudflare Tunnel is the only ingress point for external access.
+    # Internal access within docker-compose network: http://nocodb:8080
+    # If host port exposure is required, uncomment below and document the reason:
+    # ports:
+    #   - "8080:8080"
     environment:
       NC_DB: "pg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@akari-db:5432/${POSTGRES_DB}"
       NC_AUTH_JWT_SECRET: ${NC_AUTH_JWT_SECRET}
