--- a/compose.yml
+++ b/compose.yml
@@ -110,7 +110,7 @@ services:
       start_period: 40s
 
   cloudflare-tunnel:
-    image: cloudflare/cloudflared:latest
+    image: cloudflare/cloudflared:2025.11.1
     container_name: cloudflare-tunnel
     restart: unless-stopped
     command: tunnel run
