chore(kiseki): Add lint to Makefile
Lint all Go code.

--- a/kiseki/Makefile
+++ b/kiseki/Makefile
@@ -1,6 +1,6 @@
 GO := go
 
-.PHONY: init fmt vet tidy generate clean
+.PHONY: init fmt vet tidy generate lint clean
 
 init:
 	$(GO) mod download
@@ -16,6 +16,12 @@ tidy:
 
 generate: init
 	$(GO) generate ./...
+
+lint: fmt vet
+	@if [ ! -f custom-gcl ]; then \
+		golangci-lint custom; \
+	fi
+	./custom-gcl run --fix
 
 clean:
 	rm -f gen
