--- a/akari/.golangci.yml
+++ b/akari/.golangci.yml
@@ -14,6 +14,9 @@ linters:
           - dupl
           - exhaustruct
           - funlen
+      - path: ^go\.mod$
+        linters:
+          - gomoddirectives
 
   settings:
     custom:
